# s3fs-access-grants

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  lefthook.yml  package.json  pyproject.toml
.changeset/: README.md  config.json  dependency-bounds.md  first-release.md  first-version.md  guard-register-no-aws-access.md  redact-account-id.md  register-subclass.md
.github/actions/setup/: action.yaml
.github/workflows/: lint-and-test.yaml  release.yaml
scripts/: ci-bump-versions.js
src/s3fs_access_grants/: __init__.py  filesystem.py
tests/: conftest.py  test_about.py  test_filesystem.py  test_register.py
